fixed headers and footers sitewide to not be covered when zooming in

--- a/groups.css
+++ b/groups.css
@@ -7,7 +7,7 @@ body {
   flex-direction: column;
   min-width: 375px;
   background-color: #9ecffa; 
-  height: 60vh;
+  height: 100vh;
 }
 
 header {
@@ -22,12 +22,14 @@ footer {
 
 #top_nav {
     border-bottom: solid #40a3ff medium;
+    background-color: #9ecffa;
     white-space: nowrap;
     overflow: hidden;
 }
 
 #bottom_nav {
     border-top: solid #40a3ff medium;
+    background-color: #9ecffa;
     white-space: nowrap;
     overflow: hidden;
 }
